--- a/README.org
+++ b/README.org
@@ -1,7 +1,5 @@
-* Intro
-
 简单讲，这是一个用来方便使用 v2ray 代理上网的工具。支持下面的特性：
-1. 只依赖了 python3 内置的模块（openwrt 上面的即使内置模块也被拆分成了不同的包）。
+1. 只依赖了 python3 内置的模块（openwrt 上面的即使内置模块也被拆分成了不同的包），使用 python 比 shell 脚本更方便的兼容不同的系统，更好的错误捕获。还可以支持测试用例。
 2. 尽量少的修改 iptables 规则。
 3. 通过域名名单来使用不同的代理，比如 gfwlist 可以使用美国代理，而 netflix 单独使用一个支持访问的香港代理。
 4. 可以自动更新域名列表。
@@ -12,6 +10,13 @@
 9. 完全开源，你有需要可以自己修改，也可以提交合并。
 
 这个程序的主要功能是在路由器上面跑透明代理，这样局域网内所有终端都可以无缝翻墙，比如电视盒子，Google Home 这样的设备。
+
+工作原理是下面几个关键点，实际上主要是三块内容 iptables，v2ray，dnsmasq：
+1. 通过 iptables 劫持所有本机的和路过的 dns 请求（除了设定的某些国内 dns），把他们发给自己启动的 =60053= 端口的 dnsmasq。
+2. 这个 dnsmasq 会配置为，符合要求的域名（比如 gfwlist 里面的）会发送给一个 v2ray 启动的 dns 端口 =2053= ，来解决 dns 污染问题。其他的域名会走上面提到的那个国内 dns 解析。
+3. 这个 dnsmasq 同时会把这些符合条件的域名解析回来的 ip 地址添加到对应的 ipset 列表里面。
+4. 通过 iptables 会把所有发往这些 ipset 列表里面的 ip 的请求发给 v2ray 对应的转发端口。
+5. v2ray 会启动几个端口，一个是 2053 的 dns 端口，用来转发 dns 请求到 8.8.8.8 以获取无污染的 dns 结果。其他的都是用来转发真实请求的，不同的域名列表，也就是 =list_xxx= 那个配置，会有不同的端口，对应不同的出口，这样可以做到根据域名来分流到不同的代理服务器。
 
 * Install
 
